@@ -37,6 +37,7 @@ Changes in 3.2.2 :
 - Added patch from amichai which makes the plasma applet a popup applet and which fixes some other things (190822)
 - Fix bug causing drag and drop of torrent on to plasma desktop not to work
 - Increase numwant to 200 and the maximum number of potential peers to 500
+- Cancel all scan dialogs before exiting, this fixes a crash (191487)
 
 Changes in 3.2.1 :
 - Resort torrents if display name is changed
